--- a/pages/workshop-bebe.html
+++ b/pages/workshop-bebe.html
@@ -170,7 +170,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/sono.jpg">
+                                            data-setbg="../img/blog/details/bebe-e-mae.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
@@ -222,7 +222,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/mae-com-bebe.jpg">
+                                            data-setbg="../img/blog/details/bebe-no-colo.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
@@ -273,7 +273,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bebe.jpg">
+                                            data-setbg="../img/blog/details/bebe-a-gatinhar.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
@@ -325,7 +325,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/bebe.jpg">
+                                            data-setbg="../img/blog/details/bebe-a-dormir-de-bariga.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
@@ -361,11 +361,11 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/amame-grupo.jpg" alt="">
+                                <img src="../img/blog/details/mae-amamentando.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
-                                        grupo</a></h5>
+                                <h5><a href="workshop-amament.html">Amamentação sem dor: realidade ou ficção?</a>
+                                </h5>
                                 <ul>
                                     <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -376,11 +376,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/amame.jpg" alt="">
+                                <img src="../img/blog/details/mae-deitada.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
-                                        Individual</a></h5>
+                                <h5><a href="workshop-amament.html">Amamentação durante o sono do bebé.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -391,10 +390,11 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/151.jpeg" alt="">
+                                <img src="../img/blog/details/bebe-no-colo.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
+                                <h5><a href="workshop-bebe.html">Exterogestação: os primeiros 3 meses do seu
+                                        bebé.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -403,20 +403,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <img src="../img/blog/details/152.jpg" alt="">
-                            </div>
-                            <div class="blog__item__text">
-                                <h5><a href="curso-prep-indiv.html">Curso de Preparação para o Parto individual</a></h5>
-                                <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
-                                </ul>
-                            </div>
-                        </div>
+                <div class="services__details__desc text-center">
+                    <div class="section-title  mb-4">
+                        <a href="workshop.html" class="primary-btn mt-4">Mais Workshops </a>
                     </div>
                 </div>
             </div>
