--- a/pages/workshop-primeiros-socoros.html
+++ b/pages/workshop-primeiros-socoros.html
@@ -118,9 +118,8 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-5">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg mb-2 position-relative"
-                data-setbg="../img/blog/details/pediatria.jpg"
-                style="background: url('../img/blog/details/pediatria.jpg') no-repeat center center/cover; height: 400px;">
+            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/socoros.jpg"
+                style="background: url('../img/blog/details/socoros.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="row d-flex justify-content-start h-100">
                     <div class="col-lg-7 text-start d-flex align-items-start">
                         <div class="blog__hero__text p-4 rounded shadow"
@@ -175,7 +174,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/152.jpg">
+                                            data-setbg="../img/blog/details/engasgado.jpg">
                                             <a href="#" class="play-btn video-popup">Presencial - 14/06/2025</a>
                                         </div>
                                     </div>
@@ -210,40 +209,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/amame.jpg" alt="">
+                                <img src="../img/blog/details/bebe-e-mae.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-grupo.html">Amamentação sem dor: realidade ou ficção?</a>
-                                </h5>
-                                <ul>
-                                    <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <img src="../img/blog/details/sono.jpg" alt="">
-                            </div>
-                            <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-indiv.html">Amamentação durante o sono do bebé.</a></h5>
-                                <ul>
-                                    <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <img src="../img/blog/details/mae-com-bebe.jpg" alt="">
-                            </div>
-                            <div class="blog__item__text">
-                                <h5><a href="curso-prep-grupo.html">Exterogestação: os primeiros 3 meses do seu
-                                        bebé.</a></h5>
+                                <h5><a href="workshop-bebe.html">Autonomia do bebé e da criança.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -251,15 +220,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/bebe.jpg" alt="">
+                                <img src="../img/blog/details/bebe-a-gatinhar.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-indiv.html">Marcos do desenvolvimento infantil nos primeiros 12
+                                <h5><a href="workshop-bebe.html">Marcos do desenvolvimento infantil nos primeiros 12
                                         meses de vida.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
@@ -274,13 +241,18 @@
                                 <img src="../img/blog/details/Snoezelen.png" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-indiv.html">Terapia Snoezelen na gravidez</a></h5>
+                                <h5><a href="workshp-gravidez.html">Terapia Snoezelen na gravidez</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
                                 </ul>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="services__details__desc text-center">
+                    <div class="section-title  mb-4">
+                        <a href="workshop.html" class="primary-btn mt-4">Mais Workshops </a>
                     </div>
                 </div>
             </div>
