--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -179,15 +179,16 @@
 
                     </div>
                 </div>
+
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/amame-grupo.jpg" alt="">
+                                <img src="../img/blog/details/mae-amamentando.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
-                                        grupo</a></h5>
+                                <h5><a href="workshop-amament.html">Amamentação sem dor: realidade ou ficção?</a>
+                                </h5>
                                 <ul>
                                     <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -198,11 +199,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/amame.jpg" alt="">
+                                <img src="../img/blog/details/mae-deitada.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
-                                        Individual</a></h5>
+                                <h5><a href="workshop-amament.html">Amamentação durante o sono do bebé.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -213,10 +213,11 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/151.jpeg" alt="">
+                                <img src="../img/blog/details/bebe-no-colo.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
+                                <h5><a href="workshop-bebe.html">Exterogestação: os primeiros 3 meses do seu
+                                        bebé.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -229,10 +230,101 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/152.jpg" alt="">
+                                <img src="../img/blog/details/bebe-e-mae.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-indiv.html">Curso de Preparação para o Parto individual</a></h5>
+                                <h5><a href="workshop-bebe.html">Autonomia do bebé e da criança.</a></h5>
+                                <ul>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                    <li>Dec 06, 2019</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="blog__item">
+                            <div class="blog__item__pic">
+                                <img src="../img/blog/details/bebe-a-gatinhar.jpg" alt="">
+                            </div>
+                            <div class="blog__item__text">
+                                <h5><a href="workshop-bebe.html">Marcos do desenvolvimento infantil nos primeiros 12
+                                        meses de vida.</a></h5>
+                                <ul>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                    <li>Dec 06, 2019</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="blog__item">
+                            <div class="blog__item__pic">
+                                <img src="../img/blog/details/Snoezelen.png" alt="">
+                            </div>
+                            <div class="blog__item__text">
+                                <h5><a href="workshp-gravidez.html">Terapia Snoezelen na gravidez</a></h5>
+                                <ul>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                    <li>Dec 06, 2019</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="blog__item">
+                            <div class="blog__item__pic">
+                                <img src="../img/blog/details/bebe-a-dormir-de-bariga.jpg" alt="">
+                            </div>
+                            <div class="blog__item__text">
+                                <h5><a href="workshop-bebe.html">Sono seguro do bebé.</a></h5>
+                                <ul>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                    <li>Dec 06, 2019</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="blog__item">
+                            <div class="blog__item__pic">
+                                <img src="../img/blog/details/bira.jpg" alt="">
+                            </div>
+                            <div class="blog__item__text">
+                                <h5><a href="worshop-Parentalidade.html">Birras: como sobreviver!</a></h5>
+                                <ul>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                    <li>Dec 06, 2019</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="blog__item">
+                            <div class="blog__item__pic">
+                                <img src="../img/blog/details/crianca-a-tossir.jpg" alt="">
+                            </div>
+                            <div class="blog__item__text">
+                                <h5><a href="Workshop-pediatria.html">Doenças respiratórias infantis</a></h5>
+                                <ul>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
+                                    <li>Dec 06, 2019</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="blog__item">
+                            <div class="blog__item__pic">
+                                <img src="../img/blog/details/engasgado.jpg" alt="">
+                            </div>
+                            <div class="blog__item__text">
+                                <h5><a href="workshop-primeiros-socoros.html">Engasgamento no primeiros 12 meses de
+                                        vida.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
