--- a/pages/worshop-Parentalidade.html
+++ b/pages/worshop-Parentalidade.html
@@ -118,7 +118,7 @@
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-5">
         <div class="container mt-9">
-            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/dad.jpg"
+            <div class="blog__details__hero set-bg mb-2 position-relative" data-setbg="../img/blog/details/parents.jpg"
                 style="background: url('../img/blog/details/daad.jpg') no-repeat center center/cover; height: 400px;">
                 <div class="row d-flex justify-content-start h-100">
                     <div class="col-lg-7 text-start d-flex align-items-start">
@@ -170,7 +170,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/152.jpg">
+                                            data-setbg="../img/blog/details/bira.jpg">
                                             <a href="#" class="play-btn video-popup">presencial - 20/1/2025</a>
                                         </div>
                                     </div>
@@ -201,15 +201,16 @@
 
                     </div>
                 </div>
+
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/amame-grupo.jpg" alt="">
+                                <img src="../img/blog/details/mae-amamentando.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
-                                        grupo</a></h5>
+                                <h5><a href="workshop-amament.html">Amamentação sem dor: realidade ou ficção?</a>
+                                </h5>
                                 <ul>
                                     <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -220,11 +221,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/amame.jpg" alt="">
+                                <img src="../img/blog/details/mae-deitada.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
-                                        Individual</a></h5>
+                                <h5><a href="workshop-amament.html">Amamentação durante o sono do bebé.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -235,10 +235,11 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/151.jpeg" alt="">
+                                <img src="../img/blog/details/bebe-no-colo.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
+                                <h5><a href="workshop-bebe.html">Exterogestação: os primeiros 3 meses do seu
+                                        bebé.</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -247,20 +248,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <img src="../img/blog/details/152.jpg" alt="">
-                            </div>
-                            <div class="blog__item__text">
-                                <h5><a href="curso-prep-indiv.html">Curso de Preparação para o Parto individual</a></h5>
-                                <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
-                                </ul>
-                            </div>
-                        </div>
+                <div class="services__details__desc text-center">
+                    <div class="section-title  mb-4">
+                        <a href="workshop.html" class="primary-btn mt-4">Mais Workshops </a>
                     </div>
                 </div>
             </div>
