--- a/pages/Workshop-pediatria.html
+++ b/pages/Workshop-pediatria.html
@@ -174,7 +174,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/152.jpg">
+                                            data-setbg="../img/blog/details/crianca-a-tossir.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
@@ -205,17 +205,17 @@
 
                     </div>
                 </div>
+
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/amame-grupo.jpg" alt="">
+                                <img src="../img/blog/details/bebe-e-mae.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
-                                        grupo</a></h5>
+                                <h5><a href="workshop-bebe.html">Autonomia do bebé e da criança.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
                                 </ul>
                             </div>
@@ -224,13 +224,13 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/amame.jpg" alt="">
+                                <img src="../img/blog/details/bebe-a-gatinhar.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
-                                        Individual</a></h5>
+                                <h5><a href="workshop-bebe.html">Marcos do desenvolvimento infantil nos primeiros 12
+                                        meses de vida.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
                                 </ul>
                             </div>
@@ -239,10 +239,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/151.jpeg" alt="">
+                                <img src="../img/blog/details/Snoezelen.png" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
+                                <h5><a href="workshp-gravidez.html">Terapia Snoezelen na gravidez</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -251,20 +251,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <img src="../img/blog/details/152.jpg" alt="">
-                            </div>
-                            <div class="blog__item__text">
-                                <h5><a href="curso-prep-indiv.html">Curso de Preparação para o Parto individual</a></h5>
-                                <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
-                                </ul>
-                            </div>
-                        </div>
+                <div class="services__details__desc text-center">
+                    <div class="section-title  mb-4">
+                        <a href="workshop.html" class="primary-btn mt-4">Mais Workshops </a>
                     </div>
                 </div>
             </div>
