--- a/pages/workshop-amament.html
+++ b/pages/workshop-amament.html
@@ -186,7 +186,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/sono.jpg">
+                                            data-setbg="../img/blog/details/mae-deitada.jpg">
                                             <a href="#" class="play-btn video-popup">Live</a>
                                         </div>
                                     </div>
@@ -239,7 +239,7 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-12">
                                         <div class="consultation__video set-bg"
-                                            data-setbg="../img/blog/details/amame.jpg">
+                                            data-setbg="../img/blog/details/mae-amamentando.jpg">
                                             <a href="#" class="play-btn video-popup"><i class="fa fa-calendar"></i>
                                                 12/06/2025</a>
                                         </div>
@@ -275,13 +275,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/amame-grupo.jpg" alt="">
+                                <img src="../img/blog/details/bebe-a-dormir-de-bariga.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-grupo.html">Curso de Preparação para a Amamentação em
-                                        grupo</a></h5>
+                                <h5><a href="workshop-bebe.html">Sono seguro do bebé.</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team 4.jpg" alt=""> John Doe</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
                                 </ul>
                             </div>
@@ -290,13 +289,12 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/blog/details/amame.jpg" alt="">
+                                <img src="../img/blog/details/bira.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-amamentacao-indiv.html">Curso de Preparação para a Amamentação
-                                        Individual</a></h5>
+                                <h5><a href="worshop-Parentalidade.html">Birras: como sobreviver!</a></h5>
                                 <ul>
-                                    <li><img src="../img/team/team-7.jpg" alt=""> John Doe</li>
+                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
                                 </ul>
                             </div>
@@ -305,10 +303,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="blog__item">
                             <div class="blog__item__pic">
-                                <img src="../img/151.jpeg" alt="">
+                                <img src="../img/blog/details/crianca-a-tossir.jpg" alt="">
                             </div>
                             <div class="blog__item__text">
-                                <h5><a href="curso-prep-grupo.html">Curso de Preparação para o Parto em Grupo</a></h5>
+                                <h5><a href="Workshop-pediatria.html">Doenças respiratórias infantis</a></h5>
                                 <ul>
                                     <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
                                     <li>Dec 06, 2019</li>
@@ -317,20 +315,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="blog__item">
-                            <div class="blog__item__pic">
-                                <img src="../img/blog/details/152.jpg" alt="">
-                            </div>
-                            <div class="blog__item__text">
-                                <h5><a href="curso-prep-indiv.html">Curso de Preparação para o Parto individual</a></h5>
-                                <ul>
-                                    <li><img src="../img/team/team-5.jpg" alt=""> John Doe</li>
-                                    <li>Dec 06, 2019</li>
-                                </ul>
-                            </div>
-                        </div>
+                <div class="services__details__desc text-center">
+                    <div class="section-title  mb-4">
+                        <a href="workshop.html" class="primary-btn mt-4">Mais Workshops </a>
                     </div>
                 </div>
             </div>
